✨[#74] 찜하기 수 top 5 Redis - Dto로 넣기